<?xml version="1.0"?>
<package format="3">
  <name>raptor_dbw_interface</name>
  <version>0.0.0</version>
  <description>Vehicle interface for Raptor DBW with Autoware</description>
  <maintainer email="omer@mnm.com.tr">omer</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>raptor_dbw_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ackermann_msgs</depend>

  <depend>autoware_control_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>autoware_common</depend>
  <depend>tier4_vehicle_msgs</depend>
  <depend>vehicle_info_util</depend>
  <depend>time_utils</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_index_python</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>autoware_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
